<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuMain"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_main" />

    <item
        android:id="@+id/menuCatalog"
        android:icon="@drawable/ic_baseline_shopping_24"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/menuCart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/menuNews"
        android:icon="@drawable/ic_baseline_newspaper_variant_24"
        android:title="@string/title_news" />

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_profile" />

</menu>